--- a/pragprog/tolearn.yml
+++ b/pragprog/tolearn.yml
@@ -1,27 +1,49 @@
-areas:
-  concurrency:
-  scaling:
-  security:
-  TDD/testing:
-platforms:
-  iPhone:
-  FB:
-languages:
-  erlang:
-  jruby on rails:
-  haskell:
-  scala:
-  groovy:
-  clojure:
-  obj-c:
+Tech:
+  improve:
+    areas:
+    platforms:
+    languages:
+  
+  new:
+    areas:
+    concurrency:
+    scaling:
+    security:
+    TDD/testing:
+  platforms:
+    iPhone:
+    FB:
+  languages:
+    erlang:
+    jruby on rails:
+    haskell:
+    scala:
+    groovy:
+    clojure:
+    obj-c:
 
 Non-tech:
-  art:
-    drawing:
-  health:
-  morning routine:
-    yoga:
-    brush teeth:
-    meditate:
-    read/study:
-    green tea:
+  improve:
+    art:
+      drawing:
+    health:
+      massage:
+    morning routine:
+      yoga:
+      brush teeth:
+      meditate:
+      green tea:
+    study:
+      tech:
+      blogs:
+
+  new:
+    art:
+    health:
+      accupuncture:
+      GP:
+      tai chi:
+    morning routine:
+      yoga:
+    study:
+      modern china:
